plugins {
    id 'eclipse'
    id 'idea'
    id "net.neoforged.moddev.legacyforge" version "2.0.124"
}

project.ext {
    major = mod_version_major
    minor = mod_version_minor
    if (System.getenv("CI_PIPELINE_IID") != null) {
        build = System.getenv("CI_PIPELINE_IID") + "-alpha"
    } else {
        build = "x-custom"
    }
    mcVersion = minecraft_version
}

version = "${project.ext.major}.${project.minor}.${project.build}"
group = "com.bluepowermod"
archivesBaseName = "bluepower"

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

repositories {
    //Needed for intellij
    maven {
        name = 'sponge'
        url = 'https://repo.spongepowered.org/repository/maven-public/'
        content {
            includeGroup "org.spongepowered"
        }
    }
    maven {
        // location of the maven that hosts Jade/WAILA files
        url "https://www.cursemaven.com"
        content {
            includeGroup "curse.maven"
        }
    }
    maven {
        // location of the maven that hosts JEI files
        name = "Modmaven"
        url = "https://modmaven.dev"
    }
}

legacyForge {
    version = "${project.minecraft_version}-${project.forge_version}"
    parchment {
        minecraftVersion = project.minecraft_version
        mappingsVersion = project.mapping_version
    }
    runs {
        client {
            client()
        }
        data {
            data()
            programArguments.addAll('--mod', 'bluepower', '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath())
        }
        server {
            server()
        }
    }
    mods {
        "${mod_id}" {
            sourceSet sourceSets.main
        }
    }
}

mixin {
    add sourceSets.main, "bluepower.refmap.json"
    config "bluepower.mixins.json"
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

dependencies {
    modCompileOnly("curse.maven:jade-324717:${jade_version}")
    annotationProcessor 'org.spongepowered:mixin:0.8.5-SNAPSHOT:processor'
    implementation("org.jetbrains:annotations:26.0.1")
    modCompileOnly("mezz.jei:jei-${project.minecraft_version}-forge:${jei_version}")
    modRuntimeOnly("mezz.jei:jei-${project.minecraft_version}-forge:${jei_version}")
}

tasks.withType(ProcessResources).configureEach {
    var replaceProperties = [
            minecraft_version   : minecraft_version, minecraft_version_range: minecraft_version_range,
            forge_version         : forge_version, forge_version_range: forge_version_range,
            loader_version_range: loader_version_range, mod_version: version,
    ]
    inputs.properties replaceProperties

    filesMatching(['META-INF/mods.toml']) {
        expand replaceProperties + [project: project]
    }
}

tasks.named('jar', Jar).configure {
    manifest {
        attributes(["Specification-Title": "bluepower",
                    "Specification-Vendor": "qmunity",
                    "Specification-Version": "28.0",
                    "Implementation-Title": project.name,
                    "Implementation-Version": project.jar.archiveVersion,
                    "Implementation-Vendor" :"qmunity",
                    "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
                    "MixinConfigs" : "bluepower.mixins.json"
        ],)
    }
    archiveAppendix = "${project.ext.mcVersion}"
    archiveClassifier = "universal"
}

task deobfJar(type: Jar) {
    from(sourceSets.main.output) {
        archiveAppendix = "${project.ext.mcVersion}"
        archiveClassifier = "deobf"
    }
}

// Create API library zip
task apiZip(type: Zip) {
    from(sourceSets.main.java) {
        include 'com/bluepowermod/api/**'
        archiveAppendix = "${project.ext.mcVersion}"
        archiveClassifier = "api"
    }
}

apiZip.mustRunAfter deobfJar

artifacts {
    archives deobfJar
    archives apiZip
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
}